# mgmodeler-svn

./: AUTHORS  Makefile.am  README  TODO  bootstrap.sh  configure.ac
help/: Makefile.am  gpl.html  index.html  manual.html
icons/: Makefile.am
plugins/: Makefile.am
plugins/IO/: Makefile.am  lexer.l  parser.y  vrml.cc  vrmlexport.cc  vrmlimport.cc
plugins/Objects/: Makefile.am  circle.cc  nurbs.cc  polyline.cc  polyline.h
src/: ChangeLog  Makefile  Makefile.am  gc.cc  gc.h  icons.h  main.cc  mainwindow.cc  mainwindow.h  openglwidget.cc  openglwidget.h  plugin.cc  plugin.h  subconfig.ui  subconfig.ui.h  view.cc  view.h  view2d.cc  view2d.h  view3d.cc  view3d.h
src/help/: about.txt  index.dcf  index.html
src/math/: point.h  vector3.h
src/plugins/IO/: Makefile  vrml.cc  vrml.l
src/plugins/IO/vrml/: Makefile  vrml.cc  vrml.l  vrml.y
src/plugins/Objects/: Makefile  circle.cc  nurbs.cc  polyline.cc  polyline.h  polylines.cc
src/wrl/: chess1.wrl  chess2.wrl  chess4.wrl  martian.wrl  sword.wrl  test.wrl  vase.wrl
wrl/: Makefile.am  chess3.wrl  violin.wrl
